--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.17.2",
     "firebase-tools": "^11.24.1",
+    "jss-plugin-sort-css-media-queries": "^1.0.1-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
