--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "jss-plugin-sort-css-media-queries": "^1.0.1-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-jss": "^10.10.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
