--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "firebase": "^9.17.2",
+    "firebase": "^9.18.0",
     "firebase-tools": "^11.24.1",
     "jss-plugin-sort-css-media-queries": "^1.0.1-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-jss": "^10.10.0",
