--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "dayjs": "^1.11.7",
     "firebase": "^9.18.0",
     "firebase-tools": "^11.24.1",
     "jss-plugin-sort-css-media-queries": "^1.0.1-beta.0",
